--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,11 @@
+@font-face {
+  font-family: 'MyFont';
+  src:  url('./testing.otf') format('otf');
+  font-weight: 600;
+  font-style: normal;
+}
 .hello {
   color: red;
+  font-family: 'MyFont';
   background: url('./icon.svg');
 }
